add License Notice

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<button id="next" type="button">></button>
 		</div>
         <div id="calender"></div>
-        <script src="https://raw.githubusercontent.com/holiday-jp/holiday_jp-js/master/release/holiday_jp.js"></script>
+        <script src="./holiday-jp/holiday_jp-js/master/release/holiday_jp.js"></script>
 		<script type="text/javascript" src="./calender.js"></script>
 	</body>
 </html>
