--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
-		<div id="head"></div>
-		<div id="buttons">
-			<button id="prev" type="button"><</button>
-			<button id="next" type="button">></button>
+		<div id="container">
+			<div id="head"></div>
+			<div id="buttons">
+				<button id="prev" type="button"><</button>
+				<button id="next" type="button">></button>
+			</div>
+			<div id="calender"></div>
 		</div>
-        <div id="calender"></div>
-        <script src="./holiday-jp/holiday_jp-js/master/release/holiday_jp.js"></script>
-		<script type="text/javascript" src="./calender.js"></script>
+        <script src="./holiday_jp.js"></script>
+		<script type="text/javascript" src="./calendar.js"></script>
 	</body>
 </html>
