add function: showInfo

--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>aa</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
 		<div id="container">
 			<div id="head"></div>
-			<div id="buttons">
-				<button id="prev" type="button"><</button>
-				<button id="next" type="button">></button>
+			<div id="content">
+				<div id="buttons">
+					<button id="prev" type="button"><</button>
+					<button id="next" type="button">></button>
+				</div>
+				<div id="calender"></div>
 			</div>
-			<div id="calender"></div>
+			<div id="info">
+				<div id="infoDate"></div>
+				<div id="infoHoliday"></div>
+			</div>
 		</div>
         <script src="./holiday_jp.js"></script>
 		<script type="text/javascript" src="./calendar.js"></script>
